fix address bar scroll on mobile

--- a/static/normalize.css
+++ b/static/normalize.css
@@ -11,7 +11,7 @@
 html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
-    min-height: 100vh;
+    overflow: hidden;
 }
 
 /* Sections
@@ -23,6 +23,8 @@ html {
 
 body {
     margin: 0;
+    overflow-y: scroll;
+    background-color: green;
 }
 
 /**
